Fixed issue with table being off too much & improved support for Windows

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -40,10 +40,10 @@ html, body {
 }
 
 .Reparator {
-    position: relative;
+    position: absolute;
     margin-top: 3%;
     margin-bottom: 1%;
-    right: -15%;
+    right: 11%;
     width: 15%;
 }
 
