--- a/redirStylesheet.css
+++ b/redirStylesheet.css
@@ -57,7 +57,7 @@ html, body {
 
 .Kundens-uppgifter {
     position: relative;
-    margin-top: -5%;
+    margin-top: -4%;
     margin-bottom: 1%;
     right: 11%;
     border-radius: 40%;
